# PAuLaFAST

./: .gitignore  2do.txt  CMakeLists.txt  README.md  START_HRL_pcd.bat  START_VELOOUT_bin.bat  START_tablescene.bat  devlog.txt  imgui.ini  load_pcl_PaulaFAST.bat  paulafast.cfg  readme.txt
Release/: imgui.ini
scripts/: compr_pcl2.py  gen_compressed_pcl.py  read_compressed.py
src/: CSV.hxx  Vec3f.hxx  glob_type.h  kitty_evaluate_object.hpp  lzf.h  main.cpp  mmap.h  paula.h  paula_cfg.hpp  paula_cfg_reader.h  paula_classify.hpp  paula_detect.hpp  paula_io.hpp  paula_visu.hpp
